@@ -213,6 +213,8 @@ ok(SPVM::TestCase::Sys::IO->utime("$test_dir"));
   ok(SPVM::TestCase::Sys::IO->spvm_stderr);
 }
 
+ok(SPVM::TestCase::Sys::IO->utimes("$test_dir"));
+
 SPVM::api->set_exception(undef);
 
 # All object is freed
