@@ -4,6 +4,7 @@
     * Add the set_env method to the Sys class.
     * Add the alarm method to the Sys class.
     * The kill method in the Sys class can be used in Windows if $pid is equal to the current process id.
+    * Add the utimes method to the Sys::IO class.
   [Incompatible Changes]
     * Remove the Sys::FileTest class.
     * Remove throwing exceptions in the ualarm method in the Sys::Signal class.
